# b3-quant-analytics

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: cd.yml  ci.yml
configs/: config.yaml  logging.yaml  model_config.yaml
dashboards/: app.py
docs/: architecture.md  index.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
reports/metrics/: batch_predictions.csv
scripts/: batch_inference.py  run_pipeline.py  train_model.py
src/: __init__.py  main.py
src/exceptions/: __init__.py  custom_exceptions.py
src/features/: __init__.py  build_features.py  feature_store.py
src/ingestion/: __init__.py  fetch_api.py  fetch_db.py
src/pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
src/processing/: __init__.py  clean.py  transform.py  validate.py
src/utils/: __init__.py  config_loader.py  helpers.py  logger.py
tests/: __init__.py  conftest.py  test_features.py  test_ingestion.py  test_models.py  test_processing.py
