[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b3-quant-analytics"
version = "0.1.0"
description = "Pipeline quantitativo para análise de risco e retorno de ativos da B3"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "yfinance>=0.2.40",
  "scikit-learn>=1.3.0",
  "statsmodels>=0.14.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "tqdm>=4.66.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.37.0",
  "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
addopts = "-q"
